--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "leaflet": "^1.9.4",
     "leaflet-rotate": "^0.2.8",
-    "next": "15.0.1",
+    "next": "^15.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1"
